--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+ul,ol {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+a {
+    text-decoration: none;
+}
 body {
     display: flex;
     flex-flow: column wrap;
 }
+
