Заверстал секцию header > nav

--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -1,12 +1,12 @@
 @import url(style.scss);
 
 @font-face {
-    font-family: "Raleway", "Arial" sans-serif;
+    font-family: Raleway;
     src: url(../font/Raleway/Raleway-Regular.woff2),
     url(../font/Raleway/Raleway-Regular.ttf);
 }
 @font-face {
-    font-family: "Cardo", "Arial" sans-serif;
+    font-family: Cardo;
     src: url(../font/Cardo/Cardo-Regular.woff2),
     url(../font/Cardo/Cardo-Regular.ttf);
 }
