--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,11 @@
+//! Color 
+$primary-color:#fff;
+$secondary-color:#000;
+$border-color:#BABBC5;
+
+$header-background-color:#252B49;
+$button1-background-color:#FF4343;
+
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +19,56 @@ a {
     text-decoration: none;
 }
 body {
+    font-family: Raleway, Arial, sans-serif;
     display: flex;
     flex-flow: column wrap;
 }
 
+.header {
+    min-height: 747px;
+    background-image: url(../img/banner-background.jpg);
+    background-color: $header-background-color;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+.header-nav {
+    max-width: 1170px;
+    margin: 0 auto;
+&__list {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    border-bottom: 2px solid $border-color;
+}
+&__item:not(:last-child) {
+    margin-right: 15px;
+}
+&__link {
+    font-size: 13px;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    color: $primary-color;
+}
+}
+.header-nav__link--active {
+    position: relative;
+}
+.header-nav__link--active::after {
+    position: absolute;
+    width: 100%;
+    content: "";
+    top: 66px;
+    left: 0px;
+    border-bottom: 3px solid $border-color;
+}
+
+.main {
+    flex-shrink: 0;
+    background-color: rosybrown;
+    min-height: 400px;
+}
+.footer {
+    background-color: azure;
+    min-height: 200px;
+}
