--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,7 +23,18 @@ body {
     display: flex;
     flex-flow: column wrap;
 }
-
+.button {
+    text-transform: uppercase;
+    cursor: pointer;
+    color: $primary-color;
+    font-size: 24px;
+    font-family: Raleway, Arial, serif;
+    font-weight: 600;
+    border: none;
+}
+.button--red {
+    background-color: $button1-background-color;
+}
 .header {
     min-height: 747px;
     background-image: url(../img/banner-background.jpg);
@@ -35,6 +46,7 @@ body {
 .header-nav {
     max-width: 1170px;
     margin: 0 auto;
+    margin-bottom: 130px;
 &__list {
     display: flex;
     flex-flow: row wrap;
@@ -62,7 +74,28 @@ body {
     left: 0px;
     border-bottom: 3px solid $border-color;
 }
-
+.banner {
+    width: 1170px;
+    margin: 0 auto;
+    color: $primary-color;
+    text-align: center;
+}
+.banner__title {
+    font-size: 64px;
+    margin-bottom: 30px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.banner__text {
+    font-size: 24px;
+    font-weight: 400;
+    margin-bottom: 80px;
+}
+.banner__button {
+    padding: 20px 90px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.250);
+    margin-bottom: 120px;
+}
 .main {
     flex-shrink: 0;
     background-color: rosybrown;
