--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,13 +2,27 @@
 $primary-color:#fff;
 $secondary-color:#000;
 $border-color:#BABBC5;
+$gray-color:#6C7279;
+$active-color:#E71414;
 
 $header-background-color:#252B49;
 $button1-background-color:#FF4343;
-
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 ul,ol {
     margin: 0;
@@ -53,6 +67,12 @@ body {
     align-items: center;
     border-bottom: 2px solid $border-color;
 }
+&__item {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    min-height: 125px;
+}
 &__item:not(:last-child) {
     margin-right: 15px;
 }
@@ -63,16 +83,27 @@ body {
     color: $primary-color;
 }
 }
-.header-nav__link--active {
+
+.header-nav__link:hover,
+.header-nav__link:hover {
+    pointer-events: auto;
+    transition: border ease-in-out .2s;
+    border-bottom: 3px solid $border-color;
+}
+.headaer-nav__item--active {
     position: relative;
+}
+.header-nav__link--active {
+    cursor: default;
+    color: $active-color;
 }
 .header-nav__link--active::after {
     position: absolute;
     width: 100%;
     content: "";
-    top: 66px;
+    bottom: 0px;
     left: 0px;
-    border-bottom: 3px solid $border-color;
+    border-bottom: 3px solid $active-color;
 }
 .banner {
     width: 1170px;
@@ -98,8 +129,38 @@ body {
 }
 .main {
     flex-shrink: 0;
-    background-color: rosybrown;
-    min-height: 400px;
+}
+
+.feature {
+    padding: 110px 170px;
+}
+.feature__list {
+    width: 1170px;   
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}   
+.feature__item {
+    max-width: 370px;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    margin-bottom: 90px;
+}
+.feature__img {
+    margin-bottom: 30px;
+}
+.feature__title {
+    padding: 15px 20px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: 800;
+}
+.feature__text {
+    color: $gray-color;
+    font-size: 18px;
+    text-align: center;
 }
 .footer {
     background-color: azure;
