--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,9 @@ $active-color:#E71414;
 
 $header-background-color:#252B49;
 $button1-background-color:#FF4343;
+$button1-hover-color:$active-color;
+$our-work-background:#ff434380;
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -19,24 +22,30 @@ $button1-background-color:#FF4343;
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-ul,ol {
+
+ul,
+ol {
     margin: 0;
     padding: 0;
     list-style: none;
 }
+
 a {
     text-decoration: none;
 }
+
 body {
     font-family: Raleway, Arial, sans-serif;
     display: flex;
     flex-flow: column wrap;
 }
+
 .button {
     text-transform: uppercase;
     cursor: pointer;
@@ -46,9 +55,11 @@ body {
     font-weight: 600;
     border: none;
 }
+
 .button--red {
     background-color: $button1-background-color;
 }
+
 .header {
     min-height: 747px;
     background-image: url(../img/banner-background.jpg);
@@ -57,31 +68,36 @@ body {
     background-size: cover;
     position: relative;
 }
+
 .header-nav {
     max-width: 1170px;
     margin: 0 auto;
     margin-bottom: 130px;
-&__list {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    border-bottom: 2px solid $border-color;
-}
-&__item {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    min-height: 125px;
-}
-&__item:not(:last-child) {
-    margin-right: 15px;
-}
-&__link {
-    font-size: 13px;
-    text-transform: uppercase;
-    padding: 10px 20px;
-    color: $primary-color;
-}
+
+    &__list {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        border-bottom: 2px solid $border-color;
+    }
+
+    &__item {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        min-height: 125px;
+    }
+
+    &__item:not(:last-child) {
+        margin-right: 15px;
+    }
+
+    &__link {
+        font-size: 13px;
+        text-transform: uppercase;
+        padding: 10px 20px;
+        color: $primary-color;
+    }
 }
 
 .header-nav__link:hover,
@@ -90,13 +106,16 @@ body {
     transition: border ease-in-out .2s;
     border-bottom: 3px solid $border-color;
 }
+
 .headaer-nav__item--active {
     position: relative;
 }
+
 .header-nav__link--active {
     cursor: default;
     color: $active-color;
 }
+
 .header-nav__link--active::after {
     position: absolute;
     width: 100%;
@@ -105,41 +124,58 @@ body {
     left: 0px;
     border-bottom: 3px solid $active-color;
 }
+
 .banner {
     width: 1170px;
     margin: 0 auto;
     color: $primary-color;
     text-align: center;
 }
+
 .banner__title {
     font-size: 64px;
     margin-bottom: 30px;
     font-weight: 600;
     text-transform: uppercase;
 }
+
 .banner__text {
     font-size: 24px;
     font-weight: 400;
     margin-bottom: 80px;
 }
+
 .banner__button {
     padding: 20px 90px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.250);
     margin-bottom: 120px;
 }
+
+.banner__button:hover,
+.banner__button:focus {
+    background-color: $button1-hover-color;
+    transition: background-color ease-in .2s;
+}
+
+.banner__button--active {
+    box-shadow: 4px 4px 30px $button1-background-color;
+}
+
 .main {
-    flex-shrink: 0;
+    flex-grow: 2;
 }
 
 .feature {
     padding: 110px 170px;
 }
+
 .feature__list {
-    width: 1170px;   
+    width: 1170px;
     display: flex;
     flex-flow: row wrap;
     align-items: center;
-}   
+}
+
 .feature__item {
     max-width: 370px;
     display: flex;
@@ -147,9 +183,11 @@ body {
     align-items: center;
     margin-bottom: 90px;
 }
+
 .feature__img {
     margin-bottom: 30px;
 }
+
 .feature__title {
     padding: 15px 20px;
     margin-bottom: 20px;
@@ -157,12 +195,55 @@ body {
     font-size: 24px;
     font-weight: 800;
 }
+
 .feature__text {
     color: $gray-color;
     font-size: 18px;
     text-align: center;
 }
+
+.our-work {
+    &__list {
+        display: flex;
+        flex-flow: row wrap;
+    }
+    &__item {
+        width: 25%;
+        position: relative;
+    }
+}
+.our-work-link__content {
+    display: none;
+}
+.our-work-link:hover .our-work-link__content,
+.our-work-link:focus .our-work-link__content {
+    display: block;
+    background-color: $our-work-background;
+    width: 377px;
+    height: 339px;
+    transition: all linear .2s;
+}
+.our-work-link__content {
+    text-align: center;
+    padding: 110px 0;
+    top: 1px;
+    left: 0px;
+    z-index: 10;
+    position: absolute;
+    content:"";
+    color: $primary-color;
+}
+.our-work-title {
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    font-size: 24px;
+}
+.our-work-text {
+    margin-bottom: 15px;
+    font-size: 18px;
+}
 .footer {
+    flex-grow: 2;
     background-color: azure;
     min-height: 200px;
 }
