Добавил Раздел our-team

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,6 +44,7 @@ body {
     font-family: Raleway, Arial, sans-serif;
     display: flex;
     flex-flow: column wrap;
+    font-size: 18px;
 }
 
 .button {
@@ -203,6 +204,7 @@ body {
 }
 
 .our-work {
+    margin-bottom: 115px;
     &__list {
         display: flex;
         flex-flow: row wrap;
@@ -241,6 +243,44 @@ body {
 .our-work-text {
     margin-bottom: 15px;
     font-size: 18px;
+}
+.our-team {
+    padding: 0 170px;
+    margin-bottom: 115px;
+&__list {
+    display: flex;
+    flex-flow: row wrap;
+}
+&__item {
+    width: 25%;
+}
+}
+.our-team-img {
+    margin-bottom: 30px;
+}
+.our-team-title {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.our-team-position {
+    display: inline-block;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 18px;
+    color: $button1-background-color;
+    margin-bottom: 20px;
+}
+.our-team-text {
+    color: $gray-color;
+    margin-bottom: 35px;
+}
+.social-team__list {
+    display: flex;
+    flex-flow: row wrap;
+}
+.social-team__item:not(:last-child) {
+    margin-right: 10px;
 }
 .footer {
     flex-grow: 2;
