section Reviews added

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,8 +7,9 @@ $active-color:#E71414;
 
 $header-background-color:#252B49;
 $button1-background-color:#FF4343;
-$button1-hover-color:$active-color;
-$our-work-background:#ff434380;
+$button1-hover-color: $active-color;
+$our-work-background: rgba(255, 67, 67, 0.8);
+$reviews-background:#5C3249;
 
 .visually-hidden {
     position: absolute;
@@ -172,9 +173,10 @@ body {
 
 .feature__list {
     width: 1170px;
-    display: flex;
-    flex-flow: row wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     align-items: center;
+    row-gap: 90px;
 }
 
 .feature__item {
@@ -182,7 +184,6 @@ body {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
-    margin-bottom: 90px;
 }
 
 .feature__img {
@@ -223,7 +224,7 @@ body {
     background-color: $our-work-background;
     width: 377px;
     height: 339px;
-    transition: all linear .2s;
+    transition: display linear .2s;
 }
 .our-work-link__content {
     text-align: center;
@@ -281,6 +282,34 @@ body {
 }
 .social-team__item:not(:last-child) {
     margin-right: 10px;
+}
+.reviews-content {
+    display: flex;
+    flex-flow: row wrap;
+}
+.reviews-content img {
+    width: 50%;
+}
+.reviews-content--text {
+    width: 50%;
+    overflow: hidden;
+    padding-left: 120px;
+    padding-top: 115px;
+    padding-right: 170px;
+    background-color: $reviews-background;
+    color: $primary-color;
+}
+.reviews-title {
+    font-size: 36px;
+    font-family: Cardo, Arial, sans-serif;
+    font-weight: 400;
+    font-style: italic;
+}
+.reviews-text {
+    align-items: center;
+    margin: 0 auto;
+    font-family: 13px;
+    text-transform: uppercase;
 }
 .footer {
     flex-grow: 2;
