--- a/scss/style.scss
+++ b/scss/style.scss
@@ -371,8 +371,10 @@ body {
 }
 .footer {
     flex-grow: 2;
-    position: fixed;
-    bottom: 0;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: end;
+    height: auto;
     font-family: 'Raleway', 'Arial', serif;
     font-weight: 400;
 }
@@ -384,6 +386,7 @@ body {
     display: flex;
     flex-flow: row wrap;
     text-align: center;
+    height: auto;
 }
 .footer-location,
 .footer-social,
@@ -409,6 +412,7 @@ body {
     min-height: 90px;
     background-color: $bottom-footer-background;
     text-align: center;
+    height: auto;
 }
 .footer-copyright-text {
     width: 370px;
