--- a/scss/style.scss
+++ b/scss/style.scss
@@ -268,7 +268,12 @@ body {
     flex-flow: row wrap;
 }
 &__item {
-    width: 25%;
+    width: 270px;
+    margin-right: 30px;
+    margin-bottom: 60px;
+}
+&__item:nth-child(4n) {
+    margin-right: 0px;
 }
 }
 .our-team-img {
@@ -422,4 +427,52 @@ body {
     & b{
         color: $primary-color;
     }
+}
+@media screen and (max-width: 1024px){
+    body {
+        margin: 0 auto;
+    }
+    .header {
+        margin: 0 auto;
+        width: 1024px;
+    }
+    .header-nav__list {
+        margin: 0 20px;
+    }
+    .banner {
+        width: 984px;
+    }
+    .banner__title {
+        font-size: 48px;
+        font-weight: 700;
+    }
+    .banner__text {
+        font-size: 18px;
+    }
+    .main {
+        width: 1024px;
+    }
+    .feature {
+        width: 1024px;
+        padding: 70px 20px;
+        margin: 0 auto;
+    }
+    .feature__list {
+        width: 100%;
+        column-gap: 20px;
+    }
+    .our-work__list {
+        overflow: hidden;
+    }
+    .our-work-link:hover .our-work-link__content,
+    .our-work-link:focus .our-work-link__content {
+        width: 256px;
+    }
+    .our-team {
+        padding: 0 20px;
+    }
+    .our-team__item {
+        max-width: 227px;
+    }
+
 }
